@@ -9,7 +9,8 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			var sudoSlider = $("#slider").sudoSlider({
-                speed: 800
+                speed: 800,
+                responsive: false
             });
 		});	
 	</script>
@@ -41,19 +42,22 @@
 &lt;script type="text/javascript" &gt;
     $(document).ready(function(){
         var sudoSlider = $("#slider").sudoSlider({
-           speed: 800
+           speed: 800,
+           responsive: false
         });
     });
 &lt;/script&gt;</pre>
     <h4>The HTML</h4>
 	<pre>
 &lt;div style="text-align:center;position:relative;"&gt;
-&lt;div id="slider" style="margin: 0 auto;" &gt;
-   &lt;div&gt;&lt;img src="../images/01.jpg" alt="image description"/&gt;&lt;/div&gt;
-   &lt;div&gt;&lt;img src="../images/02.jpg" alt="image description"/&gt;&lt;/div&gt;
-   &lt;div&gt;&lt;img src="../images/03.jpg" alt="image description"/&gt;&lt;/div&gt;
-   &lt;div&gt;&lt;img src="../images/04.jpg" alt="image description"/&gt;&lt;/div&gt;
-   &lt;div&gt;&lt;img src="../images/05.jpg" alt="image description"/&gt;&lt;/div&gt;
+&lt;div id="slider" style="margin: 0 auto;"&gt;
+    &lt;ul&gt;
+        &lt;li&gt;&lt;img src="../images/08.jpg" alt="image description"/&gt;&lt;/li&gt;
+        &lt;li style="width:500px;"&gt;
+           &lt;img src="../images/02.jpg" width="500px;" alt="image description"/&gt;
+        &lt;/li&gt;
+        &lt;li&gt;&lt;img src="../images/07.jpg" alt="image description"/&gt;&lt;/li&gt;
+    &lt;/ul&gt;
 &lt;/div&gt;
 &lt;/div&gt;</pre>
 </div>
