@@ -10,7 +10,8 @@
 		$(document).ready(function(){	
 			var oldt = 1;
 			var sudoSlider = $("#slider").sudoSlider({
-                continuous: true
+                continuous: true,
+                responsive: false
 			});
 		});	
 	</script>
@@ -43,7 +44,8 @@
     $(document).ready(function(){	
         var oldt = 0;
         var sudoSlider = $("#slider").sudoSlider({
-            continuous: true
+            continuous: true,
+            responsive: false
         });
     });	
 &lt;/script&gt;</pre>
