@@ -24,6 +24,7 @@
 			];
 			var sudoSlider = $("#slider").sudoSlider({
                 effect: "fade",
+                responsive: false,
 			    continuous:true,
 			    ajax: ajaximages,
                 ajaxLoad: function(t){
