@@ -143,7 +143,7 @@
             opacity: 0.001;
             height:10px;
         }
-        .controls a {
+        #sliderControlsContainer .controls a {
             top: -10px;
         }
 	</style>
