@@ -12,6 +12,7 @@
             var sudoSlider = $("#slider").sudoSlider({
                 continuous: true,
                 touch: true,
+                mouseTouch: true,
                 prevNext: true,
                 numeric: true,
                 effect: "fade"
@@ -45,6 +46,7 @@
       var sudoSlider = $("#slider").sudoSlider({
          continuous: true,
          touch: true,
+         mouseTouch: true,
          prevNext: true,
          numeric: true,
          effect: "slide"
