@@ -12,6 +12,7 @@
             var sudoSlider = $("#slider").sudoSlider({
                 continuous: true,
                 touch: true,
+                mouseTouch: true,
                 touchHandle: "#handle",
                 prevNext: true,
                 numeric: true,
@@ -48,6 +49,7 @@
       var sudoSlider = $("#slider").sudoSlider({
          continuous: true,
          touch: true,
+         mouseTouch: true,
          touchHandle: "#handle",
          prevNext: true,
          numeric: true,
