@@ -12,6 +12,7 @@
             var sudoSlider = $("#slider").sudoSlider({
                 continuous: true,
                 touch: true,
+                mouseTouch: true,
                 touchHandle: "#slider h1",
                 prevNext: true,
                 numeric: true,
@@ -61,6 +62,7 @@
       var sudoSlider = $("#slider").sudoSlider({
          continuous: true,
          touch: true,
+         mouseTouch: true,
          touchHandle: "#slider h1",
          prevNext: true,
          numeric: true,
