@@ -421,3 +421,4 @@ Change in script: Added allowScroll option, so you can disable the behaviour tha
 Change in docs: Removed the ticker mode demo.
 Change in script: Fixed an of by one alignment problem, caused by some CSS.
 Change in script: Improved animation startup time for all animations where boxes or slices are animated in (so when they fade in, slide in, grow in etc.).
+Change in script: Responsive option is now true as default.
